[package]
name = "exodus"
version = "0.1.0"
authors = ["Lukas Kirschner <lukas@lukaskirschner.de>"]
edition = "2021"

[workspace]

members = [
    "libexodus"
]

[dependencies]
bevy = "0.7.0"
indoc = "1.0.4"
libexodus = { path = "libexodus" }
bevy_egui = { version = "0.14.0", default-features = false }