[package]
name = "exodus"
version = "0.1.0"
authors = ["Lukas Kirschner <lukas@lukaskirschner.de>"]
edition = "2021"

[workspace]
resolver = "2"
members = [
    "libexodus"
]

[dependencies]
indoc = "2.0.1"
libexodus = { path = "libexodus" }
bevy_egui = { version = "0.20", default-features = false }
strum = "0.25.0"
once_cell = "1.16.0"
rust-i18n = "2.1.0"

[package.metadata.i18n]
available-locales = ["en_US", "de_DE"]
default_locale = "en_US"
load_path = "locales"

# Bevy Debloating - see https://bevy-cheatbook.github.io/setup/bevy-config.html
[dependencies.bevy]
version = "0.10"
# Disable the default features if there are any that you do not want
default-features = false
features = [
    # These are the default features:
    # (re-enable whichever you like)

    # Bevy functionality:
    "bevy_asset", # Assets management
    "bevy_core_pipeline",
    #    "bevy_scene",         # Scenes management
    #    "bevy_gilrs",         # Gamepad input support
    #    "bevy_audio",         # Builtin audio
    #    "bevy_winit",         # Window management
    #    "animation",          # Animation support
    "x11", # Linux: Support X11 windowing system
    #    "filesystem_watcher", # Asset hot-reloading
    #    "bevy_render", # Graphics Rendering

    ## "render" actually just includes:
    ## (feel free to use just a subset of these, instead of "render")
    #    "bevy_render",        # Rendering framework core
    #    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_sprite", # 2D (sprites) rendering
    #    "bevy_pbr",           # 3D (physically-based) rendering
    #    "bevy_gltf",          # GLTF 3D assets format support
    #    "bevy_text",          # Text/font rendering
    #    "bevy_ui",            # UI toolkit

    # File formats:
    "png",
    #    "hdr",
    #    "vorbis",

    # These are other features that may be of interest:
    # (add any of these that you need)

    # Bevy functionality:
    "wayland", # Linux: Support Wayland windowing system
    #    "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
    #    "serialize",            # Support for `serde` Serialize/Deserialize
    #    "bevy_dynamic_plugin",   # Support for loading of `DynamicPlugin`s

    # File formats:
    #    "ktx2", # preferred format for GPU textures
    #    "dds",
    #    "jpeg",
    #    "bmp",
    "png",
    #    "tga",
    #    "basis-universal",
    #    "zstd", # needed if using zstd in KTX2 files
    #    "flac",
    #    "mp3",
    #    "wav",

    # Development/Debug features:
    #    "dynamic", # Dynamic linking for faster compile-times
    #    "trace",        # Enable tracing for performance measurement
    #    "trace_tracy",  # Tracing using `tracy`
    #    "trace_chrome", # Tracing using the Chrome format
    #    "wgpu_trace",   # WGPU/rendering tracing
]


[profile.release]
debug = false
strip = "symbols"
debug-assertions = false
lto = true
codegen-units = 1
opt-level = 3

[profile.dev.package."*"]
opt-level = 3