[package]
name = "libexodus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true

[dependencies]
directories = "5.0.1"
walkdir = "2.5.0"
strum = "0.26.2"
strum_macros = "0.26.2"
bincode = "1.3.3"
sha2 = "0.10.8"
bytebuffer = "2.2.0"
regex = "1.10.4"
rand_chacha = "0.3.1"
rand = "0.8.5"

[dependencies.chrono]
version = "0.4.37"
default-features = false
features = [
    "clock", # Native Time.now()
]