[package]
name = "libexodus"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true

[dependencies]
directories = "6.0.0"
walkdir = "2.5.0"
strum = "0.27.1"
strum_macros = "0.27.1"
bincode = "1.3.3"
sha2 = "0.10.8"
bytebuffer = "2.3.0"
regex = "1.11.1"
rand_chacha = "0.9.0"
rand = "0.9.0"

[dependencies.chrono]
version = "0.4.40"
default-features = false
features = [
    "clock", # Native Time.now()
]